HBASE-29144 Client request fails for KERBEROS with RpcConnectionRegistry (#7588)
Signed-off-by: Junegunn Choi <junegunn@apache.org>
(cherry picked from commit 19c9d33cf2bac83bfe1416ee0364e7b4c9a5d03b)